# PGPTracker

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_gui.py  setup.py
.streamlit/: config.toml
examples/: test_integration_stage2.py
src/pgptracker/: cli.py  interactive.py  pipeline.py  subcommands.py
src/pgptracker/analysis/: stratify.py  unstratified.py
src/pgptracker/cli/: cli.py  interactive.py  subcommands.py
src/pgptracker/environments/: pgptracker.yml  picrust2.yml
src/pgptracker/gui/: README.md  __init__.py  app.py  callbacks.py  components.py  ids.py  layout.py  plots.py  state.py  utils.py
src/pgptracker/picrust/: hsp_prediction.py  metagenome_p2.py  place_seqs.py
src/pgptracker/qiime/: classify.py  export.py  export_module.py
src/pgptracker/stage1_processing/: gen_ko_abun.py  merge_tax_abun.py  phylogeny.py  pipeline_st1.py  prediction.py  strat_pgpt.py
src/pgptracker/stage2_analysis/: clr_normalization.py  clr_normalize.py  clustering_ML.py  diversity.py  ordination.py  pipeline_st2.py  statistics.py  visualizations.py
src/pgptracker/utils/: env_manager.py  merge.py  preprocess_inputs.py  (+6 more)
tests/: test_p2_and_gen_ko.py
tests/comparisons/: check_clr.py  strat_pgpt_debug.py
tests/unit/: test_classify.py  test_clr_normalize.py  test_env_manager.py  test_gen_ko_abun.py  test_hsp_prediction.py  test_machine_leaning.py  test_merge.py  test_metagonome_p2.py  test_phylogeny.py  test_place_seqs.py  test_prediction.py  test_qiime_export.py  test_statistics.py  test_stratify.py  test_stratifyv2.py  test_validators.py
(+8 files in other folders)
